# Mammoth

mammoth_snowplow/: CMakeLists.txt
mammoth_snowplow/config/: costmap_global_static.yaml  planner.yaml
mammoth_snowplow/launch/: competition_double_I.launch  competition_single_I.launch  drive_mammoth.launch  move_base.launch  waypoint_publisher.launch
mammoth_snowplow/src/: map_laser_scan.cpp  map_reader.cpp  redirect.cpp  waypoint_class.cpp
recovery/reverse_recovery/: CMakeLists.txt  package.xml  reverse_plugin.xml
recovery/reverse_recovery/include/: reverse_recovery.h
recovery/reverse_recovery/src/: reverse_recovery.cpp
yeti_snowplow/models/yeti/: model.sdf
