<?xml version="1.0"?>
<package format="2">
  <name>reverse_recovery</name>
  <version>0.0.0</version>
  <description>The reverse_recovery package</description>

  <maintainer email="lutulu-ubuntu-1604@todo.todo">lutulu-ubuntu-1604</maintainer>
  <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>angles</build_depend>
    <build_depend>base_local_planner</build_depend>
    <build_depend>cmake_modules</build_depend>

    <depend>costmap_2d</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_core</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>

    <export>
        <nav_core plugin="${prefix}/reverse_plugin.xml" />
    </export>
</package>
